# crypto

./: Dockerfile  README.md
Sujet-6/: .gitignore  CMakeLists.txt  readme.md
Sujet-6/apps/: lfsr_poc_app.cpp  mt19937_poc_app.cpp
Sujet-6/apps/session_hijack/: attacker.cpp  server.cpp
Sujet-6/include/core/: concepts.hpp  lfsr.hpp  mt19937.hpp
Sujet-6/include/crypto_analysis/: gf2_solver.hpp  untemperer.hpp
Sujet-6/include/network/: socket_raii.hpp
Sujet-6/include/session_hijack/: session_client.hpp
Sujet-6/src/crypto_analysis/: gf2_solver.cpp
Sujet-6/src/network/: socket_raii.cpp
apps/session_hijack/: attacker.cpp  victim.cpp
include/core/: lfsr.hpp  mt19937.hpp
include/crypto_analysis/: untemperer.hpp
include/session_hijack/: protocol.hpp
src/crypto_analysis/: gf2_solver.cpp
